fix: dont use flexbox on headers in markdown to fix wrapping
https://cdn.discordapp.com/attachments/859516358281396234/1098393186596044925/image.png
https://discord.com/channels/855123416889163777/859516358281396234/1098478629345833060

--- a/frontend/src/assets/css/markdown.scss
+++ b/frontend/src/assets/css/markdown.scss
@@ -13,7 +13,6 @@
   h4,
   h5,
   h6 {
-    display: flex;
     margin-top: 20px;
     margin-bottom: 0;
   }
